--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
 <style>
-.body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;}
+{
+          margin: 0;
+          padding: 0;
+          box-sizing: border-box;}
 
 .container {
 width: 100%;
@@ -15,28 +15,69 @@ justify-content: center;
 background-color: #f0f0f0;
 }
 
-.logo {
-width: 300px;
-height: 300px;
-background-image: url("logo.png");
-background-size: cover;
-background-position: center;
+.card {
+width: 80%;
+max-width: 800px;
+height: 60%;
+max-height: 600px;
+border-radius: 20px;
+box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+overflow: hidden;
 }
 
-.slogan {
-font-family: Arial, sans-serif;
-font-size: 32px;
+.card-image {
+wid
+th: 100%;
+height: 50%;
+object-fit: cover;
+}
+
+.card-content {
+width: 100%;
+height: 50%;
+padding: 20px;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+}
+
+.card-title {
+font-size: 36px;
 font-weight: bold;
 color: #333333;
-margin-left: 20px;
+}
+
+.card-subtitle {
+font-size: 24px;
+font-style: italic;
+color: #777777;
+}
+
+.card-button {
+width: 200px;
+height: 50px;
+border-radius: 25px;
+border: none;
+background-color: #ff9900;
+color: white;
+font-size: 18px;
+font-weight: bold;
+cursor: pointer;
 }
 </style>
 </head>
 <body>
 <div class="container">
-<div class="logo"></div>
-<div class="slogan">Em
-powering new creators</div>
+<div class="card">
+<img src="^1^" alt="IN3PIRE logo" class
+="card-image">
+<div class="card-content">
+<h1 class="card-title">IN3PIRE</h1>
+<h2 class="card-subtitle">Empowering new creators</h2>
+<button class="card-button">Join us now</button>
+</div>
+</div>
 </div>
 </body>
 </html>
