--- a/index.html
+++ b/index.html
@@ -1,83 +1,39 @@
 <html>
 <head>
 <style>
-{
-          margin: 0;
-          padding: 0;
-          box-sizing: border-box;}
-
+body {
+/* Create a linear gradient background from top left to bottom right /
+background: linear-gradient(to bottom right, #ff0000, #ffff00);
+/ Set the font family and size for the whole page /
+font-family: Arial, sans-serif;
+font-size: 20px;
+}
+/ Center the content of the page /
 .container {
-width: 100%;
-height: 100vh;
-display: flex;
-align-items: center;
-justify-content: center;
-background-color: #f0f0f0;
-}
-
-.card {
 width: 80%;
-max-width: 800px;
-height: 60%;
-max-height: 600px;
-border-radius: 20px;
-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-overflow: hidden;
+margin: 0 auto;
 }
-
-.card-image {
-wid
-th: 100%;
-height: 50%;
-object-fit: cover;
+/ Style the logo image /
+.logo {
+width: 300px;
+height: 100px;
 }
-
-.card-content {
-width: 100%;
-height: 50%;
-padding: 20px;
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-}
-
-.card-title {
-font-size: 36px;
-font-weight: bold;
-color: #333333;
-}
-
-.card-subtitle {
-font-size: 24px;
-font-style: italic;
-color: #777777;
-}
-
-.card-button {
-width: 200px;
-height: 50px;
-border-radius: 25px;
-border: none;
-background-color: #ff9900;
+/ Style the slogan text */
+.slogan {
 color: white;
-font-size: 18px;
 font-weight: bold;
-cursor: pointer;
+font-size: 40px;
+text-align: center;
 }
 </style>
 </head>
 <body>
-<div class="container">
-<div class="card">
-<img src="^1^" alt="IN3PIRE logo" class
-="card-image">
-<div class="card-content">
-<h1 class="card-title">IN3PIRE</h1>
-<h2 class="card-subtitle">Empowering new creators</h2>
-<button class="card-button">Join us now</button>
-</div>
-</div>
+<div cl
+ass="container">
+<!-- Display the logo image -->
+<img src="^1^" alt="IN3PIRE logo" class="logo">
+<!-- Display the slogan text -->
+<p class="slogan">Empowering new creators</p>
 </div>
 </body>
 </html>
