--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
 <html>
 <head>
 <style>
-body {
-/* Create a linear gradient background from top left to bottom right /
+.body {
 background: linear-gradient(to bottom right, #ff0000, #ffff00);
-/ Set the font family and size for the whole page /
 font-family: Arial, sans-serif;
 font-size: 20px;
 }
-/ Center the content of the page /
+
 .container {
 width: 80%;
 margin: 0 auto;
 }
-/ Style the logo image /
+
 .logo {
 width: 300px;
 height: 100px;
 }
-/ Style the slogan text */
+
 .slogan {
 color: white;
 font-weight: bold;
