--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
-<html>
-<head>
 <style>
-.body {
-background: linear-gradient(to bottom right, #ff0000, #ffff00);
-font-family: Arial, sans-serif;
-font-size: 20px;
-}
-
-.container {
-width: 80%;
-margin: 0 auto;
-}
-
-.logo {
-width: 300px;
-height: 100px;
-}
-
-.slogan {
+.typewriter {
+font-family: monospace;
+font-size: 2em;
 color: white;
-font-weight: bold;
-font-size: 40px;
-text-align: center;
+background-color: black;
+padding: 10px;
+border-radius: 10px;
+overflow: hidden;
+white-space: nowrap;
+margin: 0 auto;
+animation: typing 4s steps(40, end), blink 0.5s step-end infinite alternate;
 }
+
+@keyframes typing {
+from {
+width: 0;
+}
+to {
+width: 100%;
+}
+}
+
+@keyframes blink {
+from, to {
+border-right-color: transparent;
+}
+50% {
+border-right-color: white;
+}
+}
+
 </style>
-</head>
-<body>
-<div cl
-ass="container">
-<!-- Display the logo image -->
-<img src="^1^" alt="IN3PIRE logo" class="logo">
-<!-- Display the slogan text -->
-<p class="slogan">Empowering new creators</p>
+
+<div class="typewriter">
+IN3PIRE - empower new creators
 </div>
-</body>
-</html>
